Set up flexbox and alter style.css Made alterations to flexbox in .css and some other formatting choices

--- a/style.css
+++ b/style.css
@@ -1,12 +1,32 @@
-#container {
+body {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+#container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 5px;
+}
+
+.buttonContainer {
+    display: flex;
+    gap: 5px;
+}
+
+.scoreDisplay {
+    font-size: x-large;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bolder;
+    margin-left: 5px;
+}
+
 button {
-    background-color: yellow;
-    color: black;
+    background-color: seagreen;
+    color: white;
     border-color: black;
     border-width: 5px;
     border-radius: 10px;
